redhat/Makefile: Move HEAD to Makefile.variables.
Bugzilla: INTERNAL

commit 4c6829781edd7d1340d62391485b2be120b34d51
Author: Prarit Bhargava <prarit@redhat.com>
Date:   Fri Mar 4 14:41:12 2022 -0500

    redhat/Makefile: Move HEAD to Makefile.variables.

    Move HEAD to Makefile.variables.

    Signed-off-by: Prarit Bhargava <prarit@redhat.com>

Signed-off-by: Prarit Bhargava <prarit@redhat.com>

--- a/redhat/Makefile.variables
+++ b/redhat/Makefile.variables
@@ -50,3 +50,8 @@ PACKAGE_NAME ?= kernel
 
 # This is the executable for 'git' commands.
 GIT ?= git
+
+# This is the referenced HEAD commit for git commands and can be used to change
+# the "top of tree" commit ID.  This is useful in cases where users want to
+# build against an older commit but do not want to check out the tree.
+HEAD ?= HEAD
