--- a/redhat/Makefile.variables
+++ b/redhat/Makefile.variables
@@ -69,3 +69,15 @@ BUILD_SCRATCH_TARGET ?=
 
 # This is the brew/koji command scratch build options.
 BUILD_TARGET ?=
+
+# This sets the koji/brew configuration profile variable.
+BUILD_PROFILE ?=
+
+# This overrides the default git repository for the distg-* targets.  See
+# the 'make dist-full-help' entry for distg-brew for information on setting
+# rhg.url.
+RHGITURL?=$(shell $(GIT) config rhg.url || $(GIT) config remote.origin.url)
+
+# This sets the base commit ID for distg-* targets, and must be set on the
+# commandline with distg-* targets.
+RHGITCOMMIT?=$(shell $(GIT) log -1 --pretty=format:%H)
