redhat/Makefile: Move BUILD_FLAGS to Makefile.variables.
Bugzilla: INTERNAL

commit 5e021f6efdc327399cdc47e2958ab9881813adf3
Author: Prarit Bhargava <prarit@redhat.com>
Date:   Sun Mar 6 12:34:57 2022 -0500

    redhat/Makefile: Move BUILD_FLAGS to Makefile.variables.

    Move BUILD_FLAGS to Makefile.variables.

    Signed-off-by: Prarit Bhargava <prarit@redhat.com>

Signed-off-by: Prarit Bhargava <prarit@redhat.com>

--- a/redhat/Makefile.variables
+++ b/redhat/Makefile.variables
@@ -73,6 +73,10 @@ BUILD_TARGET ?=
 # This sets the koji/brew configuration profile variable.
 BUILD_PROFILE ?=
 
+# This sets the koji|brew build flags for the dist[g]-koji|brew targets.  These
+# options are passed directly to the brew and koji commands in those targets.
+BUILD_FLAGS ?=
+
 # This overrides the default git repository for the distg-* targets.  See
 # the 'make dist-full-help' entry for distg-brew for information on setting
 # rhg.url.
