redhat/Makefile: Move BUILD to Makefile.variables
Bugzilla: INTERNAL

commit 4b547eeb9b72ba2a3fdd700fb0f021f5a4867546
Author: Prarit Bhargava <prarit@redhat.com>
Date:   Mon Mar 7 20:48:09 2022 -0500

    redhat/Makefile: Move BUILD to Makefile.variables

    Move BUILD to Makefile.variables.

    Signed-off-by: Prarit Bhargava <prarit@redhat.com>

Signed-off-by: Prarit Bhargava <prarit@redhat.com>

--- a/redhat/Makefile.variables
+++ b/redhat/Makefile.variables
@@ -77,6 +77,10 @@ BUILD_PROFILE ?=
 # options are passed directly to the brew and koji commands in those targets.
 BUILD_FLAGS ?=
 
+# This sets the incremental build version value in the rpm NVR.  If unset, this
+# defaults to RHEL_RELEASE from Makefile.rhelver
+BUILD ?=
+
 # This overrides the default git repository for the distg-* targets.  See
 # the 'make dist-full-help' entry for distg-brew for information on setting
 # rhg.url.
