--- a/redhat/Makefile
+++ b/redhat/Makefile
@@ -114,7 +114,9 @@ endif
 KVERSION:=$(RPMKVERSION).$(RPMKPATCHLEVEL).$(RPMKSUBLEVEL)
 RPMVERSION:=$(KVERSION)
 
-BUILD:=$(RHEL_RELEASE)
+ifndef BUILD
+  BUILD:=$(RHEL_RELEASE)
+endif
 SPECFILE:=$(PACKAGE_NAME).spec
 RPM:=$(REDHAT)/rpm
 SRPMS:=$(RPM)/SRPMS
