redhat/genspec.sh: Rework RPMVERSION variable
Bugzilla: INTERNAL

Conflicts: ARK has RPMVERSION ${RPMKVERSION}.${RPMKPATCHLEVEL}, which
differs from centos-stream-9 (I will investigate this difference in a
later changeset).  Move the KVERSION define down in the Makefile.  This is
necessary in centos-stream-9, and is also done in kernel-ark bea0526d7c59
commit ("redhat/Makefile: Fix dist-git").

commit ccfb6568a1ff6d36006bd3610f0fc0bdb6c75ce4
Author: Prarit Bhargava <prarit@redhat.com>
Date:   Sun Mar 6 13:35:27 2022 -0500

    redhat/genspec.sh: Rework RPMVERSION variable

    The redhat/genspec.sh file contains $RPMVERSION and $RPM_VERSION variables
    which don't match the Makefile variables.  Create a new KVERSION variable
    and replace $RPMVERSION with KVERSION, and $RPM_VERSION with $RPMVERSION.

    Rework the RPMVERSION variable in redhat/genspec.sh and the Makefile.

    Signed-off-by: Prarit Bhargava <prarit@redhat.com>

Signed-off-by: Prarit Bhargava <prarit@redhat.com>

--- a/redhat/Makefile
+++ b/redhat/Makefile
@@ -108,7 +108,6 @@ ifeq ($(SNAPSHOT),1)
 endif
 
 KVERSION:=$(RPMKVERSION).$(RPMKPATCHLEVEL).$(RPMKSUBLEVEL)
-RPMVERSION:=$(KVERSION)
 
 ifndef BUILD
   BUILD:=$(RHEL_RELEASE)
@@ -133,6 +132,7 @@ else
 endif
 
 PKGRELEASE:=$(PREBUILD)$(BUILD)$(BUILDID)$(SOURCE_DIST)
+RPMVERSION=${RPMKVERSION}.${RPMKPATCHLEVEL}.${RPMKSUBLEVEL}-$(PKGRELEASE)
 SPECRELEASE:=$(PREBUILD)$(BUILD)%{?buildid}%{?dist}
 
 ifeq ("$(DISTRO)", "fedora")
@@ -603,7 +603,7 @@ endif
 		exit 1; \
 	fi; \
 	fi
-	$(REDHAT)/scripts/rh-dist-git.sh "$(RHDISTGIT_BRANCH)" "$(RHDISTGIT_CACHE)" "$(RHDISTGIT_TMP)" "$(RHDISTGIT)" "$(TARBALL)" "$(KABI_TARBALL)" "$(KABIDW_TARBALL)" "$(PACKAGE_NAME)" "$(RPMVERSION)-$(PKGRELEASE)" "$(REDHAT)/$(CHANGELOG)" "$(RHEL_MAJOR)" "$(RHPKG_BIN)" "$(SRPMS)/$(PACKAGE_NAME)-$(KVERSION)-$(PKGRELEASE)$(SRPM_DIST).src.rpm"
+	$(REDHAT)/scripts/rh-dist-git.sh "$(RHDISTGIT_BRANCH)" "$(RHDISTGIT_CACHE)" "$(RHDISTGIT_TMP)" "$(RHDISTGIT)" "$(TARBALL)" "$(KABI_TARBALL)" "$(KABIDW_TARBALL)" "$(PACKAGE_NAME)" "$(KVERSION)-$(PKGRELEASE)" "$(REDHAT)/$(CHANGELOG)" "$(RHEL_MAJOR)" "$(RHPKG_BIN)" "$(SRPMS)/$(PACKAGE_NAME)-$(KVERSION)-$(PKGRELEASE)$(SRPM_DIST).src.rpm"
 
 dist-rtg: dist-release
 	@$(MAKE) dist-release-tag
