redhat/Makefile: Deprecate BREW_FLAGS, KOJI_FLAGS, and TEST_FLAGS
Bugzilla: INTERNAL

Conflicts: Note deprecation in 9.1, instead of upstream target.

commit c4b2e5f448cee3f383461f17282e523e8ba4f5c5
Author: Prarit Bhargava <prarit@redhat.com>
Date:   Sun Mar 6 16:20:11 2022 -0500

    redhat/Makefile: Deprecate BREW_FLAGS, KOJI_FLAGS, and TEST_FLAGS

    The BREW_FLAGS, KOJI_FLAGS, and TEST_FLAGS variables can be replaced with
    BUILD_FLAGS.  Mark these three variables for later deprecation and warn
    users about their usage.

    Signed-off-by: Prarit Bhargava <prarit@redhat.com>

Signed-off-by: Prarit Bhargava <prarit@redhat.com>

--- a/redhat/Makefile
+++ b/redhat/Makefile
@@ -1,3 +1,19 @@
+# deprecated variables
+ifdef BREW_FLAGS
+  # deprecated in 9.1
+  $(warning WARNING: BREW_FLAGS will be deprecated in a later release, use BUILD_FLAGS instead.)
+endif
+
+ifdef KOJI_FLAGS
+  # deprecated in 9.1
+  $(warning WARNING: KOJI_FLAGS will be deprecated in a later release, use BUILD_FLAGS instead.)
+endif
+
+ifdef TEST_FLAGS
+  # deprecated in 9.1
+  $(warning WARNING: TEST_FLAGS will be deprecated in a later release, use BUILD_FLAGS instead.)
+endif
+
 include Makefile.variables
 
 LANG=C
