--- a/redhat/Makefile.variables
+++ b/redhat/Makefile.variables
@@ -8,6 +8,10 @@
 # the current branch.
 DIST_BRANCH ?= "main"
 
+# This is the dist release suffix used in the package release, eg. .fc34,
+# .el8 etc. In a different branch this may be set to a fixed value.
+DIST ?= .el9
+
 # The branch used as upstream. This is what the upstream tarball is it
 # should be tracked in a local branch. This would be "master" for the
 # Linus master branch or linux-5.x.y for a stable branch. It can also be
