redhat: rpminspect: disable modified files checks for ystream
Bugzilla: INTERNAL
Upstream Status: RHEL-only

The rpminspect tests for addedfiles, changedfiles, and removedfiles
almost always fail for new ystream builds as the kernel package is under
active development. Turn off these tests.

For the same reason, also disable the rpmdeps test.

Signed-off-by: Patrick Talbert <ptalbert@redhat.com>

--- a/redhat/rpminspect.yaml
+++ b/redhat/rpminspect.yaml
@@ -2,6 +2,11 @@
 
 ---
 inspections:
+    addedfiles: off
+    changedfiles: off
+    removedfiles: off
+    kmod: off
+    rpmdeps: off
     upstream: off
 
 badfuncs:
